# decurl

./: pyproject.toml
src/decurl/: __init__.py  cli.py  core.py
tests/: test_core.py
