[project]
name = "decurl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "requests>=2.32.3",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]

[dependency-groups]
test = [
    "pytest>=8.4.0",
]
